# internal/handler/trx_history_handler.go
@@ -3,18 +3,18 @@ package handler
 import (
 	"context"
 
-	v1pb "gitlab.twprisma.com/fin/lmd/services/if-trx-history/gen/proto/v1"
-	"gitlab.twprisma.com/fin/lmd/services/if-trx-history/internal/domain/history"
+	v1pb "github.com/yogayulanda/if-trx-history/gen/proto/v1"
+	"github.com/yogayulanda/if-trx-history/internal/domain/history"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
 )
 
 type TrxHistoryHandler struct {
-	v1pb.UnimplementedTrxHistoryServiceServer
-	service *history.TrxHistoryService
+	v1pb.UnimplementedTransactionHistoryServiceServer // embed gRPC compatibility
+	service                                           *history.TrxHistoryService
 }
 
-func NewTrxHistoryHandler(service history.TrxHistoryService) *TrxHistoryHandler {
+func NewTrxHistoryHandler(service *history.TrxHistoryService) *TrxHistoryHandler {
 	return &TrxHistoryHandler{service: service}
 }
 
@@ -24,12 +24,4 @@ func (h *TrxHistoryHandler) GetTransactions(ctx context.Context, req *v1pb.GetTr
 		return nil, status.Errorf(codes.Internal, "failed to fetch transactions: %v", err)
 	}
 	return &v1pb.GetTransactionsResponse{Transactions: txns}, nil
-}
-
-func (h *TrxHistoryHandler) StoreTransaction(ctx context.Context, tx *v1pb.Transaction) (*v1pb.StoreTransactionResponse, error) {
-	err := h.service.StoreTransaction(ctx, tx)
-	if err != nil {
-		return nil, status.Errorf(codes.Internal, "failed to store transaction: %v", err)
-	}
-	return &v1pb.StoreTransactionResponse{StatusMessage: "Transaction stored successfully"}, nil
 }
